Archive2/43/18924d98fc3719/output
main.cpp: In function 'int main()':
main.cpp:8:9: error: unused variable 'l' [-Werror=unused-variable]
     lol l{};
         ^
cc1plus: all warnings being treated as errors
